--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -11,12 +11,12 @@ metadata:
   manager: eliotgra
   ms.date: 03/23/2020
   ms.custom: amqp
-  ms.openlocfilehash: c2faec6885987a57147cef2f0e9ec50bcf003793
-  ms.sourcegitcommit: dabd9eb9925308d3c2404c3957e5c921408089da
+  ms.openlocfilehash: 096f60773418066557a149b256cfc79acf8b61e2
+  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/11/2020
-  ms.locfileid: "86259358"
+  ms.lasthandoff: 07/20/2020
+  ms.locfileid: "86496921"
 landingContent:
 - title: 入门
   linkLists:
@@ -106,10 +106,6 @@ landingContent:
       url: iot-hub-x509ca-concept.md
 - title: 将 Azure CLI 用于 IoT 中心
   linkLists:
-  - linkListType: reference
-    links:
-    - text: IoT 的 CLI 参考
-      url: /cli/azure/azure-cli-reference-for-IoT
   - linkListType: concept
     links:
     - text: 创建 IoT 中心
@@ -118,5 +114,27 @@ landingContent:
       url: iot-hub-device-management-iot-extension-azure-cli-2-0.md
     - text: 配置消息路由
       url: tutorial-routing-config-message-routing-cli.md
+    - text: 配置文件上传
+      url: iot-hub-configure-file-upload-cli.md
     - text: 发送遥测和监视
       url: quickstart-send-telemetry-cli.md
+  - linkListType: reference
+    links:
+    - text: IoT 的 CLI 参考
+      url: /cli/azure/azure-cli-reference-for-IoT
+- title: 将 PowerShell 用于 IoT 中心
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 创建 IoT 中心
+      url: iot-hub-create-using-powershell.md
+    - text: 使用资源管理器模板创建 IoT 中心
+      url: iot-hub-rm-template-powershell.md
+    - text: 配置消息路由
+      url: tutorial-routing-config-message-routing-powershell.md
+    - text: 配置文件上传
+      url: iot-hub-configure-file-upload-powershell.md
+  - linkListType: reference
+    links:
+    - text: 适用于 IoT 的 PowerShell 参考
+      url: /powershell/module/az.iothub
