--- a/articles/time-series-insights/index.yml
+++ b/articles/time-series-insights/index.yml
@@ -9,54 +9,54 @@ metadata:
   ms.subservice: time-series-insights
   ms.topic: landing-page
   ms.collection: collection
-  author: KingdomOfEnds
-  ms.author: v-adgera
-  ms.date: 02/12/2020
-  ms.openlocfilehash: 1119c4ec7c0b57f1b3707708ecb9227d737e2898
-  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
+  author: shreyasharmamsft
+  ms.author: shresha
+  ms.date: 07/09/2020
+  ms.openlocfilehash: 95ebe3a05a76c7fc6a725cc565f8dc5a3e457a04
+  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/07/2020
-  ms.locfileid: "86043115"
+  ms.lasthandoff: 07/20/2020
+  ms.locfileid: "86495272"
 landingContent:
 - title: 关于 Azure 时序见解
   linkLists:
   - linkListType: overview
     links:
-    - text: 什么是 Azure 时序见解预览版？
-      url: time-series-insights-update-overview.md
-    - text: 关于 Azure 时序见解正式发布版
-      url: time-series-insights-overview.md
+    - text: Azure 时序见解第 2 代是什么？
+      url: overview-what-is-tsi.md
+    - text: 用例
+      url: overview-use-cases.md
     - text: 客户端 SDK 示例可视化
       url: https://tsiclientsample.azurewebsites.net/
   - linkListType: concept
     links:
-    - text: 在时序见解资源管理器预览版中将数据可视化
-      url: time-series-insights-update-explorer.md
+    - text: 在时序见解资源管理器中将数据可视化
+      url: concepts-ux-panels.md
     - text: 时序模型
       url: concepts-model-overview.md
   - linkListType: video
     links:
-    - text: 适用于 IoT 应用的时序见解。 (13:31)
-      url: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Azure-Time-Series-Insights-e2e-solution-for-industrial-IoT-analytics
-- title: 预览版入门
+    - text: 使用时序见解第 2 代分析数据
+      url: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Deep-Dive-Analyzing-IoT-data-using-Time-Series-Insights
+- title: 入门
   linkLists:
   - linkListType: quickstart
     links:
-    - text: 探索 Azure 时序见解预览版
-      url: time-series-insights-update-quickstart.md
+    - text: 浏览 Azure 时序见解第 2 代
+      url: quickstart-explore-tsi.md
   - linkListType: tutorial
     links:
-    - text: Azure 时序见解预览版教程
-      url: time-series-insights-update-create-environment.md
+    - text: Azure 时序见解第 2 代教程
+      url: tutorials-set-up-tsi-environment.md
   - linkListType: deploy
     links:
     - text: 连接到事件中心
-      url: time-series-insights-how-to-add-an-event-source-eventhub.md
+      url: how-to-ingest-data-event-hub.md
     - text: 连接到 IoT 中心
-      url: time-series-insights-how-to-add-an-event-source-iothub.md
+      url: how-to-ingest-data-iot-hub.md
     - text: 规划环境
-      url: time-series-insights-update-plan.md
+      url: how-to-plan-your-environment.md
     - text: 数据引入概述
       url: concepts-ingestion-overview.md
   - linkListType: how-to-guide
@@ -65,15 +65,17 @@ landingContent:
       url: time-series-insights-update-how-to-manage.md
     - text: 授予数据访问权限
       url: time-series-insights-data-access.md
+    - text: 创建时序模型
+      url: how-to-edit-your-model.md
+    - text: 查询数据
+      url: concepts-query-overview.md
 - title: API 参考
   linkLists:
   - linkListType: reference
     links:
-    - text: Azure 时序见解
-      url: /rest/api/time-series-insights/
-    - text: 数据访问概念预览版
-      url: /rest/api/time-series-insights/preview
-    - text: 数据访问正式发行版
-      url: /rest/api/time-series-insights/ga
+    - text: Rest API 概述
+      url: https://docs.microsoft.com/rest/api/time-series-insights/
+    - text: 数据访问概念第 2 代
+      url: https://docs.microsoft.com/rest/api/time-series-insights/preview
     - text: JavaScript 客户端 SDK
       url: https://github.com/microsoft/tsiclient/blob/master/docs/API.md
