--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -323,11 +323,11 @@
               href: azure-policy-configure-diagnostics.md
         - name: PowerShell
           items:
-            - name: Azure 门户中的 Azure VM
+            - name: Azure VM
               href: backup-azure-vms-automation.md
-            - name: Azure 门户的 DPM
+            - name: Data Protection Manager (DPM)
               href: backup-dpm-automation.md
-            - name: Azure 门户中的 Windows Server
+            - name: 使用 MARS 代理的 Windows 服务器
               href: backup-client-automation.md
             - name: Azure VM 备份中的 SQL
               href: backup-azure-sql-automation.md
@@ -422,7 +422,7 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Microsoft Q&A 问题页面
-      href: 'https://docs.microsoft.com/answers/topics/azure-backup.html'
+      href: /answers/topics/azure-backup.html
     - name: 定价计算器
       href: azure-backup-pricing.md
     - name: 服务更新
