--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -17,6 +17,8 @@
   items:
     - name: 使用 Web 应用
       href: tutorial-use-personalizer-web-app.md
+    - name: 使用聊天机器人
+      href: tutorial-use-personalizer-chat-bot.md
     - name: 使用 Azure Notebook
       href: tutorial-use-azure-notebook-generate-loop-data.md
       displayName: 'jupyter, notebook, python, cell, graph, chart, aggregate, model update frequency'
