--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -16,6 +16,8 @@
     - name: 部署容器实例 - ARM 模板
       displayName: Resource Manager
       href: container-instances-quickstart-template.md
+    - name: 部署容器实例 - Docker CLI
+      href: container-instances-quickstart-docker-cli.md
 - name: 教程
   items:
     - name: 创建并部署容器映像
@@ -94,8 +96,10 @@
           href: container-instances-gpu.md
         - name: 在挎斗中启用 SSL 终结点
           href: container-instances-container-group-ssl.md
-        - name: 公开静态 IP 地址
+        - name: 使用应用程序网关公开静态 IP
           href: container-instances-application-gateway.md
+        - name: 将 Azure 防火墙用于入口和出口
+          href: container-instances-egress-ip-address.md
     - name: 装载数据卷
       items:
         - name: Azure 文件共享
