--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -138,7 +138,11 @@
             - name: 创建 Dynamics 365 for Customer Engagement & PowerApps 产品/服务
               href: ./partner-center-portal/create-new-customer-engagement-offer.md
             - name: Dynamics 365 for Operations 产品/服务
-              href: ./partner-center-portal/create-new-operations-offer.md
+              items:
+                - name: Dynamics 365 for Operations 产品/服务
+                  href: ./partner-center-portal/create-new-operations-offer.md
+                - name: 功能验证
+                  href: ./dynamics-365-finance-operations-functional-validation.md
             - name: Dynamics 365 Business Central 产品/服务
               href: ./partner-center-portal/create-new-business-central-offer.md
         - name: IoT Edge 模块产品/服务
