--- a/articles/analysis-services/TOC.yml
+++ b/articles/analysis-services/TOC.yml
@@ -112,9 +112,9 @@
     - name: Power Query M
       href: 'https://docs.microsoft.com/powerquery-m/power-query-m-reference'
     - name: 表格模型脚本语言 (TMSL)
-      href: 'https://docs.microsoft.com/bi-reference/tmsl/tabular-model-scripting-language-tmsl-reference'
+      href: 'https://docs.microsoft.com/analysis-services/tmsl/tabular-model-scripting-language-tmsl-reference?view=asallproducts-allversions'
     - name: 表格对象模型 (TOM)
-      href: 'https://docs.microsoft.com/bi-reference/tom/introduction-to-the-tabular-object-model-tom-in-analysis-services-amo'
+      href: 'https://docs.microsoft.com/analysis-services/tom/introduction-to-the-tabular-object-model-tom-in-analysis-services-amo?view=asallproducts-allversions'
     - name: 资源和对象限制
       href: analysis-services-capacity-limits.md
 - name: 资源
