--- a/articles/virtual-machines/troubleshooting/linux-index.yml
+++ b/articles/virtual-machines/troubleshooting/linux-index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: f19ce0f1e088d2360f4afb2925d2a5d67b4c0252
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: b78ce7baf60431e0f9ee1b1218d2d57019b35359
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77920835"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87068978"
 landingContent:
 - title: 排查部署失败问题
   linkLists:
@@ -24,39 +24,39 @@ landingContent:
     - text: 在 Azure 中创建、重启 VM 或重设其大小时排查分配失败
       url: allocation-failure.md
     - text: 排查在 Azure 中新建虚拟机时遇到的部署问题
-      url: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-troubleshoot-deployment-new-vm
+      url: ./troubleshoot-deployment-new-vm-linux.md
     - text: 解决无效模板错误
       url: ../../azure-resource-manager/templates/error-invalid-template.md
-    - text: 解决 SKU 不可用的错误
-      url: https://docs.microsoft.com/azure/azure-resource-manager/templates/error-sku-not-available
+    - text: 解决 SKU 不可用错误
+      url: ../../azure-resource-manager/templates/error-sku-not-available.md
 - title: VM 部署指南
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: 为 Azure 准备和上传未认可的映像
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/create-upload-generic
+      url: ../linux/create-upload-generic.md
     - text: 在 Azure 中创建或克隆通用 VM 的映像
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/capture-image
+      url: ../linux/capture-image.md
 - title: 无法连接到 VM
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 如何使用启用诊断功能来解决 Azure 中 Linux 虚拟机的问题
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/boot-diagnostics
+    - text: 如何使用启动诊断排查 Azure 中 Linux 虚拟机的故障
+      url: ./boot-diagnostics.md
     - text: 如何在 Azure VM 上重置本地 Linux 密码
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/reset-password
+      url: ./reset-password.md
     - text: 使用 PowerShell 或 CLI 重置远程访问以解决远程服务器问题
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/troubleshoot-ssh-connection
+      url: ./troubleshoot-ssh-connection.md
     - text: 诊断和解决常见 SSH 连接问题的快速步骤
-      url: https://azure.microsoft.com/documentation/articles/virtual-machines-troubleshoot-ssh-connections/
+      url: ./troubleshoot-ssh-connection.md?toc=/azure/virtual-machines/linux/toc.json
 - title: 密码重置
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: 使用 VM 访问扩展重置 SSH 密钥或密码
-      url: https://docs.microsoft.com/azure/virtual-machines/extensions/vmaccess#ways-to-use-the-vmaccess-extension
+      url: ../extensions/vmaccess.md#ways-to-use-the-vmaccess-extension
     - text: 使用脱机方法重置 Azure Linux VM 的本地密码
-      url: https://docs.microsoft.com/en-us/azure/virtual-machines/troubleshooting/reset-password
+      url: ./reset-password.md
 - title: VM 无法启动
   linkLists:
   - linkListType: how-to-guide
@@ -64,19 +64,19 @@ landingContent:
     - text: 解决在应用特定内核更改后启动 VM 时出现的启动错误
       url: https://support.microsoft.com/help/4091524/how-recovery-azure-linux-vm-from-kernel-related-boot-related-issues
     - text: 使用串行控制台访问 GRUB 来修改启动配置模式
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/serial-console-grub-single-user-mode
-    - text: 如何使用启用诊断功能来解决 Azure 中 Linux 虚拟机的问题
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/boot-diagnostics
+      url: ./serial-console-grub-single-user-mode.md
+    - text: 如何使用启动诊断排查 Azure 中 Linux 虚拟机的故障
+      url: ./boot-diagnostics.md
     - text: 了解 FSTAB 错误和缓解步骤
       url: https://support.microsoft.com/help/3206699/azure-linux-vm-cannot-start-because-of-fstab-errors
 - title: 无法启动或停止 VM
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 排查在 Azure 中部署 Windows 虚拟机时遇到的问题
-      url: https://docs.microsoft.com/azure/virtual-machines/windows/restart-resize-error-troubleshooting
+    - text: 排查 Azure 中的 Windows 虚拟机部署问题
+      url: ./restart-resize-error-troubleshooting.md
     - text: 排查分配失败问题（经典部署模型）
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/allocation-failure-classic
+      url: ./allocation-failure-classic.md
 - title: VM 意外重启
   linkLists:
   - linkListType: how-to-guide
@@ -88,52 +88,52 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: 虚拟磁盘常见问题解答
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/faq-for-disks
+      url: ../linux/faq-for-disks.md
     - text: 排查在调整 VM 大小时出现的分配失败问题
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/allocation-failure
+      url: ./allocation-failure.md
     - text: 了解 VM 上的临时驱动器
-      url: https://docs.microsoft.com/azure/storage/storage-about-disks-and-vhds-linux#temporary-disk
+      url: ../linux/managed-disks-overview.md#temporary-disk
     - text: Azure 托管磁盘概述
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/managed-disks-overview
+      url: ../linux/managed-disks-overview.md
     - text: 有关 Azure VM 磁盘以及托管和非托管高级磁盘的常见问题解答
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/convert-unmanaged-to-managed-disks
+      url: ../linux/convert-unmanaged-to-managed-disks.md
 - title: 磁盘加密问题
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: Linux VM 上的 Azure 磁盘加密方案
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/disk-encryption-linux
+      url: ../linux/disk-encryption-linux.md
     - text: 排查磁盘加密问题
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/disk-encryption-troubleshooting
+      url: ../linux/disk-encryption-troubleshooting.md
     - text: Azure 磁盘加密常见问题解答
-      url: https://docs.microsoft.com/azure/virtual-machines/linux/disk-encryption-faq
+      url: ../linux/disk-encryption-faq.md
 - title: VM 性能问题
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: 排查 Azure VM 性能问题
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/troubleshoot-performance-virtual-machine-linux-windows
+      url: ./troubleshoot-performance-virtual-machine-linux-windows.md
     - text: Azure VM 的性能诊断
-      url: https://docs.microsoft.com/azure/virtual-machines/troubleshooting/performance-diagnostics
+      url: ./performance-diagnostics.md
 - title: VM 扩展问题
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: 针对扩展的常规故障排除步骤
-      url: https://docs.microsoft.com/azure/virtual-machines/extensions/troubleshoot
+      url: ../extensions/troubleshoot.md
     - text: 在 VM 中安装扩展
-      url: https://docs.microsoft.com/azure/virtual-machines/extensions/diagnostics-linux#installing-the-extension-in-your-vm
+      url: ../extensions/diagnostics-linux.md#installing-the-extension-in-your-vm
     - text: 适用于 Windows 的自定义脚本扩展
-      url: https://docs.microsoft.com/en-us/azure/virtual-machines/extensions/custom-script-windows#tips-and-tricks
+      url: ../extensions/custom-script-windows.md#tips-and-tricks
 - title: 备份和还原
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: 在 Azure 门户中排查 Azure VM 备份问题
-      url: https://docs.microsoft.com/azure/backup/backup-azure-vms-troubleshoot
+      url: ../../backup/backup-azure-vms-troubleshoot.md
     - text: 对 Azure 备份服务器进行故障排除
-      url: https://docs.microsoft.com/azure/backup/backup-azure-mabs-troubleshoot
+      url: ../../backup/backup-azure-mabs-troubleshoot.md
     - text: 查看 Azure 备份的功能
-      url: https://docs.microsoft.com/azure/backup/backup-introduction-to-azure-backup
+      url: ../../backup/backup-overview.md
     - text: 了解如何将 Azure 虚拟机备份到恢复服务保管库
-      url: https://docs.microsoft.com/azure/backup/backup-azure-vms-first-look-arm
+      url: ../../backup/backup-azure-vms-first-look-arm.md
