--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -54,8 +54,6 @@
               href: ios-sdk-300.md
             - name: Objective-C（版本 2.0.4）
               href: ios-sdk-204.md
-            - name: Swift
-              href: ios-sdk-swift-rest.md
         - name: 向特定设备发送推送通知
           href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
         - name: 向特定用户发送推送通知
@@ -64,16 +62,6 @@
           href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
         - name: 向 iOS 设备发送已经过本地化的推动通知
           href: notification-hubs-ios-xplat-localized-apns-push-notification.md
-    - name: 跨平台
-      items:
-        - name: 通过后端服务发送推送通知
-          items:
-            - name: Xamarin.Forms
-              href: notification-hubs-backend-service-xamarin-forms.md
-            - name: Flutter
-              href: notification-hubs-backend-service-flutter.md
-            - name: React Native
-              href: notification-hubs-backend-service-react-native.md
     - name: Windows Phone
       items:
         - name: 向应用发送推送通知
@@ -188,7 +176,7 @@
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/notification-hubs/'
     - name: Microsoft Q&A 问题页面
-      href: 'https://docs.microsoft.com/answers/topics/azure-notification-hubs.html'
+      href: /answers/topics/azure-notification-hubs.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-notificationhub'
     - name: 请求功能
